# JobFunnel

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  check_dups.py  indeed_topickle.py  masterlist_tofilterjson.py  my_settings.yaml  pickle_tomasterlist.py  pyproject.toml  readme.md  requirements.txt  run.py  runonce.sh  search_terms.json  setup.cfg  setup.py
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-publish.yml
config/: search_terms.json  settings.py
demo/: readme.md  settings.yaml  settings_DE.yaml  settings_FR.yaml  settings_USA.yaml
docs/: gen_call_graphs.sh
docs/crontab/: cronjob.sh  readme.md
docs/pycharm/: readme.md
jobfunnel/: __init__.py  __main__.py  build.sh  config.py  country_hash.py  database.py  dict.py  glassdoor.py  glassdoor_base.py  glassdoor_dynamic.py  glassdoor_static.py  global_cache.py  global_hash.txt  indeed.py  job.py  jobfunnel.py  lambda_function.py  localization.py  monster.py  push.sh  requirements.txt  search_terms.py  settings.yaml  trying.html  trying.txt  wrong.txt
jobfunnel/10-02-2020/: Hackerrank-United_States
jobfunnel/backend/: __init__.py  job.py  jobfunnel.py  localization.py
jobfunnel/config/: __init__.py  base.py  cli.py  cli_parser.py  delay.py  funnel.py  manager.py  parser.py  proxy.py  search.py  search_terms.py  settings.py  settings.yaml  valid_options.py  validate.py
jobfunnel/resources/: __init__.py  default_settings.yaml  defaults.py  enums.py  resources.py  user_agent_list.txt  user_agent_list_mobile.txt
jobfunnel/scrapers/: base.py  indeed.py  monster.py
jobfunnel/search/: Aetna -United States  Argo AI-United States  Athenahealth -United States  BNP Paribas-India  BNY Mellon-United States  Badoo-United Kingdom  Betting-Spain  Bombora-United States  Capgemini-India  Citizens Bank-United States  Cognizant Technology Solutions Corporation-India  Concordia University E-Canada  Facebook -France  Fivetran-India  Hiring-India  Instacart-United States  Jade Global-India  Keller Williams-United States  MBition GmbH-Germany  Mammoth Media-United States  McKinsey & Company-United States  MessageBird-Netherlands  Morgan Stanley-United States  Ocient-United States  TCS-India  (+10 more)
jobpy/: __main__.py  glassdoor.py  indeed.py  jobpy.py  monster.py
source/: config.py  glassdoor.py  indeed.py  interface.py  jobpy.py  monster.py
tests/: conftest.py  test_countries.py  test_delay.py  test_filters.py  test_indeed.py  test_parse.py  test_tools.py  test_validate.py
tools/: tools.py
(+47 files in other folders)
