# setup.cfg

[metadata]
# Section left intentionally empty due to pyproject.toml

[options]
# Section left intentionally empty due to pyproject.toml

[options.packages.find]
exclude =
    tests
    docs
    images

[tool.setuptools]
include-package-data = true

[flake8]
max-line-length = 120
extend-ignore = E203